Jstylesheet.css
body, html {
    height: 100%;
    width: 100%;
    margin: 0;
}

#content-desktop {
display: inline;
}

#content-mobile {
display: none;
}

.example3 .navbar-brand {
  height: 80px;
}

.example3 .nav >li >a {
  padding-top: 30px;
  padding-bottom: 30px;
}
.example3 .navbar-toggle {
  padding: 10px;
  margin: 25px 15px 25px 0;
}

.section {
	background-color: white;
 	background-size: cover;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
}

.homeSectionOne {
    background-image: url(images/index/heartMonitorWithText.jpg);

    min-height: 50%;
}

.homeSectionTwo {
	background-color: white;

	color: black;
	text-align: center;

	min-height: 25%;
}

.homeSectionThree {
	background-image: url(images/index/banner-bg.png);

    min-height: 25%;
}

#map {
    height: 200px;
    width: 75%;
}

.modal-header, h4, .close {
      background-color: #5bc0de;
      color:white !important;
      text-align: center;
      font-size: 30px;
  }
.modal-footer {
      background-color: #f9f9f9;
}

#parent {
	display: table;
}

#child {
    display: table-cell;
    vertical-align: middle;
}

.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
    background-color: #bcbcbc;
    color: white;
}

.navbar-right {
	padding-top: 15px;
}

a.hs2links {
	transform: scale(0.92);
	-o-transition:.5s;
	-ms-transition:.5s;
	-moz-transition:.5s;
	-webkit-transition:.5s;
	transition:.5s;
}

a.hs2links:hover {
	background-color: #1E90FF;
	color: white;
	border-radius: 20px;
	transform: scale(0.98);
	text-decoration: none;
}

a.industryLinks {
	-o-transition:.5s;
	-ms-transition:.5s;
	-moz-transition:.5s;
	-webkit-transition:.5s;
	transition:.5s;
}

a.industryLinks:hover {
	color: #999999;
	text-decoration: none;
}

a {
	color: black;
}

a.newsLink:hover {
	color: white;
	text-decoration: none;
	transform: scale(1.05);
}

.btn-info {
	background-color: #1E90FF;
}

.btn-info:hover {
	background-color: #4DA7FF;
}

.productImage {
	border-radius: 35px 35px 15px 15px;
	padding-top: 15px;
}

.aboutSectionOne {
	background-image: url(images/about/OfficePic.png);

	padding-top: 100px;

    min-height: 85%;
}

.blueSplitter {
	background-color: #1E90FF;
	height: 2px;
	border-radius: 10px;
}

div.meetTeam {
	transform: scale(0.92);
	text-align: center;
}

div.meetTeam:hover {
	background-color: #1E90FF;
	color: white;
	border-radius: 20px;
	transform: scale(0.98);
	text-decoration: none;
}

.newsSectionOne {
	background-image: url(images/news/newsHeader.jpg);

	min-height: 600px;
}

@media (max-width: 993px) {
	#content-desktop {
	display: none;
	}

	#content-mobile {
	display: inline;
	}

    .navbar-header {
        float: none;
    }
    
    .navbar-toggle {
        display: block;
    }
    
    .navbar-collapse {
        border-top: 1px solid transparent;
        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
    }
    
    .navbar-collapse.collapse {
        display: none!important;
    }
    
    .navbar-nav {
        float: none!important;
        margin: 7.5px -15px;
    }
    
    .navbar-nav>li {
        float: none;
        height: 30px;
    }
    
    .navbar-nav>li>a {
    	padding: 0px;
    }
    
    .navbar-text {
        float: none;
        margin: 15px 0;
    }
    
    /* since 3.1.0 */
    .navbar-collapse.collapse.in { 
        display: block!important;
    }
    
    .collapsing {
        overflow: hidden!important;
    }
    
    .example3 .nav >li >a {
    	padding: 0px 20px;
    }
    
    .navbar-right {
    	padding-top: 0px;
    	padding-left: 15px;
    	padding-bottom: 15px;
    }
    
    .collapse >ul {
    	padding-top: 15px;
    }
}

.reps {
	text-align: center;
}

